Handling the sorting of the graphs
