# src/swift-server/graph/graph.service.swift
@@ -538,7 +538,73 @@ class GraphService: ServiceWithDb, @unchecked Sendable {
 
 			return .ok(data: graphBuilder.graph)
 		}
+	}
 
+	enum MoveGraphResult {
+		case notFound
+		case updated(graphs: [Components.Schemas.Graph])
+	}
+
+	func moveGraph(
+		graphId: UUID, direction: Components.Schemas.MoveDirection,
+		for validGroupsIds: [UUID]
+	) async throws -> MoveGraphResult {
+		let graphToMove = try await Graph.query(on: db).field(\.$id).field(
+			\.$groupOwner.$id
+		)
+		.filter(
+			\.$groupOwner.$id ~~ validGroupsIds
+		)
+		.filter(\.$id == graphId).first()
+		guard let graphToMove else {
+			return .notFound
+		}
+
+		let graphsOnGroupOwner = try await Graph.query(on: db).field(\.$id).field(\.$order)
+			.filter(\.$groupOwner.$id == graphToMove.$groupOwner.id).all()
+
+		var previousGraph: Graph? = nil
+		var changedGraphs: [UUID: Int] = [:]
+		var toMoveUp: Bool = false
+
+		for (idx, graph) in graphsOnGroupOwner.enumerated() {
+			let checkGraphId = try graph.requireID()
+			if graph.order != idx {
+				changedGraphs[checkGraphId] = idx
+			}
+			if toMoveUp {
+				toMoveUp = false
+				changedGraphs[checkGraphId] = idx - 1
+			}
+			if checkGraphId == graphId {
+				switch direction {
+				case .up:
+					guard let previousGraph else {
+						break
+					}
+					let previousGraphId = try previousGraph.requireID()
+					changedGraphs[previousGraphId] = idx
+					changedGraphs[checkGraphId] = idx - 1
+				case .down:
+					toMoveUp = true
+					changedGraphs[checkGraphId] = idx + 1
+				}
+			}
+			previousGraph = graph
+		}
+		for (updateGraphId, order) in changedGraphs {
+			try await Graph.query(on: db).set(\.$order, to: order).filter(
+				\.$id == updateGraphId
+			).update()
+		}
+
+		let changedGraphsArray = changedGraphs.keys.map { $0 }
+		let graphs = try await getGraphs(
+			pageQuery: .init(limit: changedGraphs.count),
+			groupsId: [graphToMove.$groupOwner.id],
+			graphsIds: changedGraphsArray)
+
+		return .updated(graphs: graphs.list)
 	}
 
 	func deleteGraph(graphId: UUID, forUser user: User) async throws
